--- a/IMClient/Modules/User/User.storyboard
+++ b/IMClient/Modules/User/User.storyboard
@@ -17,9 +17,53 @@
                     <view key="view" contentMode="scaleToFill" id="RY1-7R-4xF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入账号密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z9y-a9-yoy" customClass="STTxf" customModule="IMClient" customModuleProvider="target">
+                                <rect key="frame" x="40" y="294" width="295" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" textContentType="password"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9N-8g-FW3" customClass="STBtn" customModule="IMClient" customModuleProvider="target">
+                                <rect key="frame" x="171" y="364" width="33" height="32"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="登录">
+                                    <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SR1-jQ-hWz" customClass="STLabl" customModule="IMClient" customModuleProvider="target">
+                                <rect key="frame" x="147" y="140" width="81.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="输入手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hBN-sm-5E7" customClass="STTxf" customModule="IMClient" customModuleProvider="target">
+                                <rect key="frame" x="40" y="224" width="295" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="SR1-jQ-hWz" firstAttribute="centerX" secondItem="RY1-7R-4xF" secondAttribute="centerX" id="7B2-rd-ZkU"/>
+                            <constraint firstItem="k4t-Ux-hxA" firstAttribute="trailing" secondItem="z9y-a9-yoy" secondAttribute="trailing" constant="40" id="9X7-3T-t7h"/>
+                            <constraint firstItem="SR1-jQ-hWz" firstAttribute="top" secondItem="k4t-Ux-hxA" secondAttribute="top" constant="120" id="IdT-bX-xb7"/>
+                            <constraint firstItem="z9y-a9-yoy" firstAttribute="top" secondItem="hBN-sm-5E7" secondAttribute="bottom" constant="40" id="LcL-P3-Nmj"/>
+                            <constraint firstItem="k4t-Ux-hxA" firstAttribute="trailing" secondItem="hBN-sm-5E7" secondAttribute="trailing" constant="40" id="QwY-pU-G63"/>
+                            <constraint firstItem="I9N-8g-FW3" firstAttribute="centerX" secondItem="RY1-7R-4xF" secondAttribute="centerX" id="ZpY-Jg-cgv"/>
+                            <constraint firstItem="z9y-a9-yoy" firstAttribute="leading" secondItem="k4t-Ux-hxA" secondAttribute="leading" constant="40" id="jFk-Ba-3cU"/>
+                            <constraint firstItem="I9N-8g-FW3" firstAttribute="top" secondItem="z9y-a9-yoy" secondAttribute="bottom" constant="40" id="k6H-np-njy"/>
+                            <constraint firstItem="hBN-sm-5E7" firstAttribute="top" secondItem="SR1-jQ-hWz" secondAttribute="bottom" constant="60" id="otd-Fh-cJe"/>
+                            <constraint firstItem="hBN-sm-5E7" firstAttribute="leading" secondItem="k4t-Ux-hxA" secondAttribute="leading" constant="40" id="y3u-vR-Npv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="k4t-Ux-hxA"/>
                     </view>
+                    <connections>
+                        <outlet property="btn_signin" destination="I9N-8g-FW3" id="EXi-EC-o9s"/>
+                        <outlet property="tf_password" destination="z9y-a9-yoy" id="REq-lW-dOa"/>
+                        <outlet property="tf_phone" destination="hBN-sm-5E7" id="Pox-8j-QUy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MgP-oO-n3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -49,7 +93,7 @@
                                 <rect key="frame" x="40" y="294" width="295" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOR-1h-z4k" customClass="STBtn" customModule="IMClient" customModuleProvider="target">
                                 <rect key="frame" x="171" y="364" width="33" height="32"/>
